# library

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
contrib/systemd/: library-index.service
libindex/: ai.py  cli.py  config.py  content.py  db.py  logutil.py  scanner.py  server.py
libindex/web/: app.js  index.html  recent.html  styles.css  viewer_epub.html  viewer_pdf.html
