[project]
name = "library"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "loguru>=0.7,<1.0",
]

[project.scripts]
library = "libindex.cli:main"

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["libindex*"]

[tool.setuptools.package-data]
libindex = [
  "web/*",
  "web/**/*",
]
